.provarCaches/00D410000011HE0EAM/objects/rstk__dimvals__c.object
<CustomObject>
    <description>dimvals__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__dimval1__c</fullName>
        <inlineHelpText>Dimension Value 1</inlineHelpText>
        <label>Dimension 1 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dimval2__c</fullName>
        <inlineHelpText>Dimension Value 2</inlineHelpText>
        <label>Dimension 2 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dimval3__c</fullName>
        <inlineHelpText>Dimension Value 3</inlineHelpText>
        <label>Dimension 3 Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dimvals_externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Obsolete Field</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>IF( ISBLANK( rstk__dimval1__c ) , &apos;&apos;, (&apos;1_&apos; +  rstk__dimval1__c ))  +
IF( ISBLANK( rstk__dimval2__c ) , &apos;&apos;, (IF( ISBLANK( rstk__dimval1__c ), &apos;&apos;, &apos;_&apos;) + (&apos;2_&apos; +  rstk__dimval2__c ))) +
IF( ISBLANK( rstk__dimval3__c ) , &apos;&apos;, (IF( AND(ISBLANK( rstk__dimval1__c ), ISBLANK( rstk__dimval2__c )), &apos;&apos;, &apos;_&apos;) + (&apos;3_&apos; +  rstk__dimval3__c ))) + 
IF( ISBLANK( rstk__dimval4__c ) , &apos;&apos;, (IF( AND(ISBLANK( rstk__dimval1__c ), ISBLANK( rstk__dimval2__c ), ISBLANK( rstk__dimval3__c )), &apos;&apos;, &apos;_&apos;) + (&apos;4_&apos; +  rstk__dimval4__c ))) + 
IF( ISBLANK( rstk__dimval5__c ) , &apos;&apos;, (IF( AND(ISBLANK( rstk__dimval1__c ), ISBLANK( rstk__dimval2__c ), ISBLANK( rstk__dimval3__c ), ISBLANK( rstk__dimval4__c )), &apos;&apos;, &apos;_&apos;) + (&apos;5_&apos; +  rstk__dimval5__c ))) + 
IF( ISBLANK( rstk__dimval6__c ) , &apos;&apos;, (IF( AND(ISBLANK( rstk__dimval1__c ), ISBLANK( rstk__dimval2__c ), ISBLANK( rstk__dimval3__c ), ISBLANK( rstk__dimval4__c ), ISBLANK( rstk__dimval5__c )), &apos;&apos;, &apos;_&apos;) + (&apos;6_&apos; +  rstk__dimval6__c ))) + 
IF( ISBLANK( rstk__dimval7__c ) , &apos;&apos;, (IF( AND(ISBLANK( rstk__dimval1__c ), ISBLANK( rstk__dimval2__c ), ISBLANK( rstk__dimval3__c ), ISBLANK( rstk__dimval4__c ), ISBLANK( rstk__dimval5__c ), ISBLANK( rstk__dimval6__c )), &apos;&apos;, &apos;_&apos;) + (&apos;7_&apos; +  rstk__dimval7__c ))) + 
IF( ISBLANK( rstk__dimval8__c ) , &apos;&apos;, (IF( AND(ISBLANK( rstk__dimval1__c ), ISBLANK( rstk__dimval2__c ), ISBLANK( rstk__dimval3__c ), ISBLANK( rstk__dimval4__c ), ISBLANK( rstk__dimval5__c ), ISBLANK( rstk__dimval6__c ), ISBLANK( rstk__dimval7__c )), &apos;&apos;, &apos;_&apos;) + (&apos;8_&apos; +  rstk__dimval8__c )))</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <description>Name of Dimension Record</description>
        <formula>IF(ISBLANK(rstk__dimval1__c),&apos;&apos;,rstk__dimval1__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval2__c),&apos;&apos;,rstk__dimval2__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval3__c),&apos;&apos;,rstk__dimval3__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval4__c),&apos;&apos;,rstk__dimval4__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval5__c),&apos;&apos;,rstk__dimval5__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval6__c),&apos;&apos;,rstk__dimval6__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval7__c),&apos;&apos;,rstk__dimval7__c)+&apos;|&apos;+
 IF(ISBLANK(rstk__dimval8__c),&apos;&apos;,rstk__dimval8__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycmp__c</fullName>
        <label>Company Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Dimension Values</label>
    <listViews>
        <fullName>NP_Dimension_Values</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__sycmp__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__dimval1__c</columns>
        <columns>rstk__dimval2__c</columns>
        <columns>rstk__dimval3__c</columns>
        <columns>rstk__dimval4__c</columns>
        <columns>rstk__dimval5__c</columns>
        <columns>rstk__dimval6__c</columns>
        <columns>rstk__dimval7__c</columns>
        <columns>rstk__dimval8__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Mine</filterScope>
        <label>NP Dimension Values</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Dimension_Values</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__sycmp__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__dimval1__c</columns>
        <columns>rstk__dimval2__c</columns>
        <columns>rstk__dimval3__c</columns>
        <columns>rstk__dimval4__c</columns>
        <columns>rstk__dimval5__c</columns>
        <columns>rstk__dimval6__c</columns>
        <columns>rstk__dimval7__c</columns>
        <columns>rstk__dimval8__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>RS Dimension Values</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>